--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ 'main' ]
-    tags: [ '*' ]
+    branches:
+    tags:
   pull_request:
-    branches: [ main ]
 
 jobs:
   macos:
