--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,9 @@ jobs:
       run: |
         mkdir package
         mkdir package/lib
-        cp libsodium-1.0.20/build-universal/libsodium.a package/lib/libsodium.a
         cp -r libsodium-1.0.20/src/libsodium/include package/include
+        cp libsodium-1.0.20/build-universal/libsodium.a package/lib/libsodium.a
+        cp libsodium-1.0.20/build-arm64/src/libsodium/include/sodium/* package/include/sodium
         7z a -tzip macos-libsodium-1.0.20-universal.zip ./package/*
     - name: Release
       if: startsWith(github.ref, 'refs/tags/')
